--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,4 @@ set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pthread")
 
 AUX_SOURCE_DIRECTORY(src SOURCE_FILES)
-add_executable(tpe_protos ${SOURCE_FILES})
+add_executable(tpe_protos ${SOURCE_FILES} src/transformation_test.c)
