SCTP parser changed, now arguments are parsed by SCTP message. GG easy parsing.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,12 @@
 cmake_minimum_required(VERSION 3.8)
 project(tpe_protos)
 
+set(CMAKE_VERBOSE_MAKEFILE ON)
+
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pthread")
+add_compile_options("-lsctp")
+link_libraries("-lsctp")
 
 AUX_SOURCE_DIRECTORY(src SOURCE_FILES)
 add_executable(tpe_protos ${SOURCE_FILES})
