changed project structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,5 +8,5 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pthread")
 add_compile_options("-lsctp")
 link_libraries("-lsctp")
 
-AUX_SOURCE_DIRECTORY(src SOURCE_FILES)
+AUX_SOURCE_DIRECTORY(pop3filter/src SOURCE_FILES)
 add_executable(tpe_protos ${SOURCE_FILES})
