--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(tpe_protos)
 set(CMAKE_VERBOSE_MAKEFILE ON)
 
 set(CMAKE_C_STANDARD 99)
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pthread --std=c99 -pedantic -pedantic-errors -Wall -Wextra -Werror -Wno-unused-parameter")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pthread --std=c99")
 add_compile_options("-lsctp")
 link_libraries("-lsctp")
 
@@ -15,4 +15,4 @@ AUX_SOURCE_DIRECTORY(pop3ctl/src POP3CTL_SOURCE_FILES)
 add_executable(pop3ctl ${POP3CTL_SOURCE_FILES})
 
 AUX_SOURCE_DIRECTORY(stripmime/src STRIPMIME_SOURCE_FILES)
-add_executable(stripmimee ${STRIPMIME_SOURCE_FILES})
+add_executable(stripmime ${STRIPMIME_SOURCE_FILES})
